--- a/app.json
+++ b/app.json
@@ -8,10 +8,10 @@
     "sdkVersion": "36.0.0",
     "version": "1.0.0",
     "entryPoint": "node_modules/expo/AppEntry.js",
-    "platforms": [
-      "ios",
-      "android",
-      "web"
-    ]
+    "platforms": ["ios", "android", "web"],
+    "android": {
+      "package": "com.leodionizio.gota_de_amor",
+      "versionCode": 1
+    }
   }
 }
