--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "scripts": {
         "android": "react-native run-android",
+        "link": "react-native link",
         "ios": "react-native run-ios",
         "web": "expo start --web",
         "start": "react-native start",
@@ -16,10 +17,10 @@
         "react-dom": "~16.9.0",
         "react-native": "~0.61.4",
         "react-native-gesture-handler": "~1.5.0",
-        "react-native-reanimated": "~1.4.0",
+        "react-native-reanimated": "^1.9.0",
         "react-native-safe-area-context": "^1.0.0",
         "react-native-screens": "2.0.0-alpha.12",
-        "react-native-unimodules": "~0.7.0",
+        "react-native-unimodules": "^0.9.1",
         "react-native-web": "~0.11.7",
         "react-navigation": "^4.1.1",
         "react-navigation-stack": "^2.5.1",
@@ -30,6 +31,7 @@
         "babel-jest": "~24.9.0",
         "jest": "~24.9.0",
         "metro-react-native-babel-preset": "~0.56.0",
+        "miragejs": "^0.1.40",
         "react-test-renderer": "~16.9.0"
     },
     "jest": {
