feat(font): configuring custom fonts

--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "Gota de Amor",
+  "name": "projectApp2",
   "displayName": "Gota de Amor",
   "expo": {
     "name": "gota_de_amor_taquaritinga",
