--- a/package.json
+++ b/package.json
@@ -1,41 +1,48 @@
 {
-    "scripts": {
-        "android": "react-native run-android",
-        "link": "react-native link",
-        "ios": "react-native run-ios",
-        "web": "expo start --web",
-        "start": "react-native start",
-        "test": "jest"
-    },
-    "dependencies": {
-        "@react-native-community/masked-view": "^0.1.10",
-        "expo": "~36.0.1",
-        "expo-font": "^8.1.1",
-        "lottie-ios": "3.1.3",
-        "lottie-react-native": "^3.3.2",
-        "react": "~16.9.0",
-        "react-dom": "~16.9.0",
-        "react-native": "~0.61.4",
-        "react-native-gesture-handler": "~1.5.0",
-        "react-native-reanimated": "^1.9.0",
-        "react-native-safe-area-context": "^1.0.0",
-        "react-native-screens": "2.0.0-alpha.12",
-        "react-native-unimodules": "^0.9.1",
-        "react-native-web": "~0.11.7",
-        "react-navigation": "^4.1.1",
-        "react-navigation-stack": "^2.5.1",
-        "react-navigation-tabs": "^2.8.12"
-    },
-    "devDependencies": {
-        "@babel/core": "~7.6.0",
-        "babel-jest": "~24.9.0",
-        "jest": "~24.9.0",
-        "metro-react-native-babel-preset": "~0.56.0",
-        "miragejs": "^0.1.40",
-        "react-test-renderer": "~16.9.0"
-    },
-    "jest": {
-        "preset": "react-native"
-    },
-    "private": true
+  "scripts": {
+    "android": "react-native run-android",
+    "android:release": "react-native run-android --variant=release",
+    "link": "react-native link",
+    "ios": "react-native run-ios",
+    "web": "expo start --web",
+    "start": "react-native start",
+    "test": "jest"
+  },
+  "dependencies": {
+    "@react-native-community/masked-view": "^0.1.10",
+    "expo": "~36.0.1",
+    "expo-device": "^2.2.1",
+    "expo-font": "^8.1.1",
+    "lottie-ios": "3.1.3",
+    "lottie-react-native": "^3.3.2",
+    "react": "~16.9.0",
+    "react-dom": "~16.9.0",
+    "react-native": "~0.61.4",
+    "react-native-gesture-handler": "~1.5.0",
+    "react-native-reanimated": "^1.9.0",
+    "react-native-safe-area-context": "^1.0.0",
+    "react-native-screens": "2.0.0-alpha.12",
+    "react-native-unimodules": "^0.9.1",
+    "react-native-web": "~0.11.7",
+    "react-navigation": "^4.1.1",
+    "react-navigation-stack": "^2.5.1",
+    "react-navigation-tabs": "^2.8.12"
+  },
+  "devDependencies": {
+    "@babel/core": "~7.6.0",
+    "babel-jest": "~24.9.0",
+    "jest": "~24.9.0",
+    "metro-react-native-babel-preset": "~0.56.0",
+    "miragejs": "^0.1.40",
+    "react-test-renderer": "~16.9.0"
+  },
+  "rnmp": {
+    "assets": [
+      "./assets/fonts/"
+    ]
+  },
+  "jest": {
+    "preset": "react-native"
+  },
+  "private": true
 }
